@@ -1,3 +1,9 @@
+2013-08-02  Sergio Martin <sergio.martin@artica.es>
+
+	* include/functions_filemanager.php: added new error message
+	on file manager to warn when the post size limit is
+	exceded by the uploaded file
+
 2013-08-02 Miguel de Dios <miguel.dedios@artica.es>
 	
 	* include/graphs/functions_gd.php, include/graphs/fgraph.php,
